@startuml OPEP_Class_Diagram

skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam defaultFontSize 12
skinparam classBorderThickness 1.5
skinparam arrowThickness 1.3
skinparam shadowing false

skinparam class {
    BackgroundColor White
    BorderColor #444444
    FontColor #000000
}

title <b>OPEP — Class Diagram</b>\n<size:10>C++17 / STL / namespace opep</size>

' ═══════════ HÀNG 1: CORE (trên cùng) ═══════════
package "core" #D6EAF8 {
    abstract class Record {
        # id : int
        # date : string
        # title : string
        --
        + {abstract} displayInfo()
        + getId() : int
        + getDate() : string
        + getTitle() : string
        + operator== ()
        + operator<< ()
    }

    class OPEPException {
        # message : string
        --
        + what() : const char*
    }
}

' ═══════════ HÀNG 2: 5 EXCEPTION ═══════════
package "exceptions" #D6EAF8 {
    class InvalidInputException
    class FileNotFoundException
    class AuthenticationException
    class InsufficientBalanceException
    class BudgetExceededException
}

' ═══════════ HÀNG 3: TASK & MONEY (song song) ═══════════
package "task" #D5F5E3 {
    enum Priority {
        LOW
        MEDIUM
        HIGH
    }

    class Task {
        - completed : bool
        - priority : Priority
        - deadline : string
        --
        + displayInfo()
        + setCompleted()
        + setPriority()
        + operator== ()
        + operator<< ()
        + operator>> ()
    }

    class TaskManager {
        - tasks : vector<unique_ptr<Task>>
        --
        + addTask()
        + removeTask()
        + markDone()
        + sortByPriority()
        + getById() : const Task*
        + count() : size_t
    }
}

package "money" #FEF9E7 {
    enum TransactionType {
        INCOME
        EXPENSE
    }

    class Transaction {
        - amount : double
        - type : TransactionType
        - category : string
        - note : string
        --
        + displayInfo()
        + getAmount() : double
        + getType()
        + operator== ()
        + operator<< ()
        + operator>> ()
    }

    class Wallet {
        - balance : double
        - transactions : vector<shared_ptr<Transaction>>
        - nextId : int
        --
        + addIncome() : shared_ptr<Transaction>
        + addExpense() : shared_ptr<Transaction>
        + loadTransaction()
        + getBalance() : double
        + totalIncome() : double
        + totalExpense() : double
    }

    class CategoryBudget <<struct>> {
        + category : string
        + limit : double
        + spent : double
        --
        + usageRatio() : double
        + isExceeded() : bool
        + isNearLimit() : bool
    }

    class Budget {
        - month : string
        - categories : map<string, CategoryBudget>
        --
        + setLimit()
        + recordExpense()
        + syncFromTransactions()
        + getCategory()
        + saveLimits()
        + loadLimits()
    }
}

' ═══════════ HÀNG 4: DATA ═══════════
package "data" #FDEDEC {
    class User {
        - username : string
        - passwordHash : string
        - createdDate : string
        --
        + getUsername()
        + getPasswordHash()
        + setPasswordHash()
        + operator== ()
    }

    class "Database<T>" as DB <<template>> {
        - filename : string
        - encrypted : bool
        - encKey : string
        --
        + save(records)
        + load() : vector<T>
        + append(record)
        + exists() : bool
    }

    class AuthManager {
        - userDb : Database<User>
        --
        + registerUser() : shared_ptr<User>
        + login() : shared_ptr<User>
        + changePassword()
        + userExists() : bool
    }

    class Encryption <<utility>> {
        + {static} xorCipher()
        + {static} hexEncode()
        + {static} hexDecode()
        + {static} hashPassword()
        + {static} encryptToFile()
        + {static} decryptFromFile()
    }
}

' ═══════════ HÀNG 5: UI ═══════════
package "ui" #F4ECF7 {
    class Menu {
        - title : string
        - items : vector<MenuItem>
        --
        + addItem()
        + addSeparator()
        + run()
        + stop()
    }

    class Dashboard {
        - wallet : Wallet&
        - taskManager : TaskManager&
        --
        + render()
    }

    class InputValidator <<utility>> {
        + {static} readInt()
        + {static} readDouble()
        + {static} readString()
        + {static} readDate()
        + {static} readPassword()
        + {static} confirm()
    }
}

' ═══════════════════════════════════════════════════════════
' QUAN HỆ - Đặt sau cùng, đi theo HÀNG → CỘT vuông góc
' ═══════════════════════════════════════════════════════════

' ── Exception hierarchy (HÀNG 2 → HÀNG 1) ──
InvalidInputException        -up-|> OPEPException
FileNotFoundException        -up-|> OPEPException
AuthenticationException      -up-|> OPEPException
InsufficientBalanceException -up-|> OPEPException
BudgetExceededException      -up-|> OPEPException

' ── Record hierarchy (HÀNG 3 → HÀNG 1) ──
Task        -up-|> Record
Transaction -up-|> Record

' ── Task uses Priority (cùng package, đi thẳng) ──
Task -[hidden]right- Priority

' ── Transaction uses TransactionType (cùng package, đi thẳng) ──
Transaction -[hidden]right- TransactionType

' ── Composition trong cùng package (đi thẳng) ──
TaskManager *-down- Task : "1..*\nowns\n<unique_ptr>"
Wallet      *-down- Transaction : "1..*\nowns\n<shared_ptr>"
Budget      *-down- CategoryBudget : "1..*\ncontains"

' ── AuthManager dùng Database<User> ──
AuthManager *-right- DB : "userDb"

' ── Database dùng Encryption ──
DB ..right..> Encryption : "encrypt /\ndecrypt"

' ── Database<T> được instantiate cho 3 type (đi UP, thẳng đứng) ──
DB ..up..> User        : "<bind\nT=User>"
DB ..up..> Task        : "<bind\nT=Task>"
DB ..up..> Transaction : "<bind\nT=Transaction>"

' ── Dashboard quan sát Wallet và TaskManager (đi UP) ──
Dashboard o-up- Wallet      : "observes\n<const&>"
Dashboard o-up- TaskManager : "observes\n<const&>"

' ── Layout hints (hidden để force vị trí) ──
Record -[hidden]right- OPEPException
Task -[hidden]right- Transaction
TaskManager -[hidden]right- Wallet

@enduml